src/sass/_marketing.scss
/* ... */
/* end of float based columns */


/* Typography for each row copy */
.r1-title,
.r2-title,
.r3-title,
.r4-title {
  font-weight: 300;
  font-size: $font-size-28;
  @include tablet-portrait-and-up() {
    font-size: $font-size-32;
  }
}

.r1-title,
.r3-title {
  color: #555; 
}

.r2-title,
.r4-title {
  color: #E6E6E6;
}

.r1-copy,
.r2-copy,
.r3-copy,
.r4-copy {
  font-weight: 300;
  font-size: $font-size-18;
  @include tablet-landscape-and-up() {
    font-size: $font-size-20;
  }
  line-height: 1.6;
}


.row1 {
  margin: 0 auto;
  background: #FFF;
  @include tablet-portrait-and-up() {
    padding: 50px 0 50px 0;
  }
  padding: 0;
  .row1-container {
    @include mobile-landscape-and-up() {
      margin: 100px auto;
      margin: 30px auto;
    }
    margin: 0 auto 30px auto;
    .row1-copy {
      /*width: 100%; */
      /*@include tablet-portrait-and-up() {
        width: 70%;
      }*/
      .r1-title {
        @include tablet-portrait-and-up() {
          position: absolute;
        }
      }
      .r1-copy {
        margin-top: 5px;
        @include tablet-portrait-and-up() {
          margin-top: 100px;
        }
        @include mobile-landscape-and-up() {
          margin-top: 80px;
        }
        .c-beta {
          color: #f93f3b;
        }
      }
    }
    .row1-img {
      img {
        max-width: 100%;
        min-width: 250px;
        width: 100%;
      }
    }
  }
}

.row2 {
  margin: 0 auto;
  background: url('../images/marketing/glg_mosaic-vibrant.jpg') no-repeat center center;
  background-size: cover;
  width: 100%;
  max-width: 100%;
  height: 100%;
  z-index: 1;
  position: relative;
  &:after {
    content: "";
    background: rgba(69,69,69,0.8);
    width: 100%;
    height: 100%;
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    z-index: 1;
  }
  .row2-copy {
    position: relative;
    z-index: 10;
    @include tablet-portrait-and-up() {
      padding: 0 50px;
    }
    padding: 0;
    .r2-title {
      color: $white;
    }
    .r2-copy {
      color: $white;
    }
  }
}

.row2-container {
  @include tablet-portrait-and-up() {
    padding-top: 85px;
  }
  padding-top: 0;
}

.row2-img-bottom {
  display: block;
  width: 85%;
  max-width: 400px;
  min-width: 300px;
  margin: 0 auto;
  @include tablet-portrait-and-up() {
    display: none;
  }
}

.row2-img {
  //width: 85%;
  max-width: 450px;
  min-width: 350px;
  display: none;
  @include tablet-portrait-and-up() {
    display: block;
  }
}

.row2-img,
.row2-img-bottom {
  bottom: -5px;
  position: relative;
  text-align: center;
  padding: 0 50px;
  z-index: 11;
  img {
    max-width: 100%;
    width: 100%;  
  }
}

.row3 {
  background: #FAFAFA;
  margin: 0 auto;
  margin-bottom: -8px;
  .row3-copy {
    .r3-title,
    .r3-copy {
      @include mobile-landscape-and-up () {
        width: 95%;
      }
      width: 95%;
    }    
    .r3-title {
      @include tablet-landscape-and-up() {
        padding-top: 50px;
      }
    }
  }
  .row3-img {
    @include tablet-portrait-and-up() {
      display: block;
    }
    display: none;
    //min-width: 375px;
    /*width: 85%;*/
    text-align: right;
    img {
      max-width: 90%;
      width: 90%;
    }
  }
  .row3-img-mobile {
    width: 85%;
    max-width: 300px;
    min-width: 300px;
    margin: 0 auto;
    @include tablet-portrait-and-up() {
      display: none;
    }
    display: block;
    img {
      width: 100%;
    }
  }
}

.row4 {
  .row4-container {
    background-image: linear-gradient(#454545, #1F1F1F);
    position: relative;
    max-width: 100%;
    /*width: 100%;*/
    .row4-img-mobile {
      @include tablet-portrait-and-up() {
        display: none; 
      }
      display: block;
    }
    .row4-img {
      @include tablet-portrait-and-up() {
        display: block; 
      }
      display: none;
    }
    .row4-img,
    .row4-img-mobile {
      background: url('../images/NYC_background_1024_opt.jpg') no-repeat center center;
      background-size: cover;
      //padding: 20px 0;
      @include mobile-landscape-and-up() {
        //padding: 74px 0;
      }
      /*width: 100%;*/
      /*max-width: 100%;*/
      height: auto;
      z-index: 1;
      position: relative;
      text-align: center;
      &:after {
        content: "";
        background: rgba(255,255,255,0.8);
        width: 100%;
        height: 100%;
        position: absolute;
        top: 0;
        left: 0;
        right: 0;
        bottom: 0;
        z-index: -1;
      }
      img {
        padding: 50px;
        min-width: 300px;
        max-width: 400px;
        width: 100%;
        @include mobile-landscape-and-up {
          width: 95%;
        }
      }
    }
    .row4-copy {
      background-image: linear-gradient(#454545, #1F1F1F);
      /*width: 100%;*/
      @include mobile-landscape-and-up() {
        padding: 60px 0;
      }
      padding: 25px 0;
      .r4-title,
      .r4-copy {
        color: $white;
        @include mobile-landscape-and-up () {
          width: 80%;
        }
        width: 95%;
        margin: 0 auto;
      }
      .r4-title {
       margin: 0 auto 20px auto;
      }
    }
  }  
}

.action-msg {
  padding: 50px 0;
}
/* ... */

